[gd_scene load_steps=2 format=3 uid="uid://do0f3wicv1d6w"]

[ext_resource type="Script" uid="uid://d2fc3gmkvx5y0" path="res://MathPuzzleUI.gd" id="1_p8hy4"]

[node name="MathPuzzleUI" type="CanvasLayer"]
layer = 100
visible = false
script = ExtResource("1_p8hy4")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -56.0
offset_right = 34.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="QuestionTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnswerInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FeedbackLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_submitted" from="Panel/VBoxContainer/AnswerInput" to="." method="_on_answer_input_text_submitted"]
